devel
-----

* Add missing metrics for user traffic: Histograms:
    `arangodb_client_user_connection_statistics_bytes_received`
    `arangodb_client_user_connection_statistics_bytes_sent`
  These numbers were so far only published via the statistics API.
  This is needed for Oasis traffic accounting.

* Deleted customizable Pregel (AIR) and Greenspun library

* BTS-128: Fixed http request not working when content-type is velocypack.

* Fixed Github issue #16451: In certain situations, a LIMIT inside a subquery
  could erroneously reduce the number of results of the containing (sub)query.

* Added agency options
    --agency.supervision-delay-add-follower
  and
    --agency.supervision-delay-failed-follower
  to delay supervision actions for a configurable amount of seconds. This is
  desirable in case a DBServer fails and comes back quickly, because it gives
  the cluster a chance to get in sync and fully resilient without deploying
  additional shard replicas and thus without causing any data imbalance.

* Deleted customizable Pregel (AIR) and Greenspun library.

* Add support for terabyte units (t, tb, T, TB, tib, TiB, TIB) in startup 
  options.

* Fix HTTP/VST traffic accounting in internal statistics / metrics.

* Updated arangosync to v2.13.0.

* Make the deprecated `--server.disable-authentication-unix-sockets` and
  `--server.disable-authentication` startup options obsolete. They were
  deprecated in v3.0 and mapped to `--server.authentication` and
  `--server.authentication-unix-sockets`, which made them do the opposite
  of what their names suggest.

* Removed more assertions from cluster rebalance js test that obligated the 
  rebalance plan to always have moves, but there were cases in which all 
  there are none.

* Log startup warnings for any experimental, deprecated, obsolete or renamed
  options at startup of arangod or any of the client tools.

* Fixed issue #17291: Server crash on error in the PRUNE expression.